////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

- Adds https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-dropped-stats.md[dropped span statistics]
  to transaction payloads allowing APM Server to calculate more accurate
  throughput metrics. ({issues}2302[#2302])

[float]
===== Bug fixes

- Fix the automatic wrapping of Lambda handlers to support handler modules
  created by `esbuild` bundling -- as is done in some Serverless Framework
  functions that use TypeScript. ({issues}2753[#2753])

- Fix Express route tracking (used for `transaction.name`) when an argument
  is passed to the `next(arg)` callback of a request handler. Before this
  change passing `next(<some object not an instance of Error>)` would be
  considered an error by Express, but not by the APM agent's route
  tracking. ({pull}2750[#2750])

- Updated `sanitizeFieldNames` and `ignoreMessageQueues` environment variables
  to use `ELASTIC_APM_` prefix. (previous variable names are still recgonized,
  but not documented) ({issues}2636[#2636])

[float]
===== Chores


[[release-notes-3.35.0]]
==== 3.35.0 2022/06/01

[float]
===== Features

- Add support for 'knex' version v0.21 to v1 ({issues}2699[#2699])

- Change the instrumentation of SQS- and SNS-triggered AWS Lambda invocations:
  The special-casing of triggers with a *single* message/record has been
  removed.  That means that instead of a possible continued distributed trace
  (if a single received message has a 'traceparent'), a *span link* will be
  added to the APM transaction for each message with a 'traceparent'.
  `transaction.context.message.` fields are no longer collected.
  ({pull}2708[#2708])

- Enable support for ioredis v5 ({pull}2714[#2714])

- A Docker image with the APM agent will be published for each release to
  `docker.elastic.co/observability/apm-agent-nodejs:VERSION`, for example: