@@ -411,6 +411,9 @@ const EMPTY_OPTS = {}
 //     this error. If not given (undefined), then the current span or
 //     transaction will be used. If `null` is given, then no span or transaction
 //     will be used.
+//   - `opts.exceptionType` - A string to use for `error.exception.type`. By
+//     default this is `err.name`. This option is only relevant if `err` is an
+//     Error instance.
 // - `cb` is a callback `function (captureErr, apmErrorIdString)`. If provided,
 //   the error will be flushed to APM server as soon as it is processed, and
 //   `cb` will be called when that send is complete.
@@ -543,7 +546,8 @@ Agent.prototype.captureError = function (err, opts, cb) {
       sourceLinesLibraryFrames: agent._conf.sourceLinesErrorLibraryFrames,
       trans,
       traceContext,
-      errorContext
+      errorContext,
+      exceptionType: opts.exceptionType
     }, function filterAndSendError (_err, apmError) {
       // _err is always null from createAPMError.
 
