@@ -130,6 +130,9 @@ function generateErrorId () {
 // - `args.errorContext` - An object to be included as `error.context`.
 // - `args.message` - A message string that will be included as `error.log.message`
 //   if `args.exception` is given. Ignored if `args.logMessage` is given.
+// - `args.exceptionType` - A string to use for `error.exception.type`. By
+//   default `args.exception.name` is used. This argument is only relevant if
+//   `args.exception` was provided.
 //
 // This always calls back with `cb(null, apmError)`, i.e. it doesn't fail.
 function createAPMError (args, cb) {
@@ -161,7 +164,7 @@ function createAPMError (args, cb) {
     const errMsg = String(err.message)
     error.exception = {
       message: errMsg,
-      type: String(err.name),
+      type: args.exceptionType || String(err.name),
       handled: args.handled
     }
 
