@@ -203,16 +203,22 @@ module.exports = function (elasticsearch, agent, { version, enabled }) {
           const errOpts = {
             captureAttributes: false
           }
-          if (err.name === 'ResponseError' && err.body && err.body.error) {
+          const errBody = err.body
+          if (err.name === 'ResponseError' && errBody && errBody.error) {
             // Include some data from the Elasticsearch API response body:
             // https://www.elastic.co/guide/en/elasticsearch/reference/current/common-options.html#common-options-error-options
-            errOpts.custom = {
-              type: err.body.error.type,
-              reason: err.body.error.reason,
-              status: err.body.status
+            const errType = errBody.error.type
+            if (errType) {
+              // Specialize `error.exception.type` for better error grouping.
+              errOpts.exceptionType = `ResponseError (${errType})`
             }
-            if (err.body.error.caused_by) {
-              errOpts.custom.caused_by = err.body.error.caused_by
+            errOpts.custom = {
+              type: errType,
+              reason: errBody.error.reason,
+              status: errBody.status
+            }
+            if (errBody.error.caused_by) {
+              errOpts.custom.caused_by = errBody.error.caused_by
             }
           }
           agent.captureError(err, errOpts)
